--- a/A3_React_searchpage/package.json
+++ b/A3_React_searchpage/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "A3_React_searchpage",
+  "name": "A3_react_searchpage",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
