--- a/A4_react_tenor_gifs/package.json
+++ b/A4_react_tenor_gifs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "A4_react_searchpage",
+  "name": "A5_react_tenor_gifs",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,9 +7,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
+    "gif-picker-react": "^1.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-tenor-gif-picker": "^1.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
