--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -3,7 +3,7 @@ build:
     commands:
     # Clone the repository
       # - git clone --no-checkout https://github.com/ShuchithaA/antstack-assignment.git
-        
+        s
         # Navigate to the repository directory
       - cd antstack-assignment
         
@@ -20,3 +20,7 @@ build:
       - pytest test_app.py
       - sam build
       - sam deploy --stack-name sam-app-url-shortener --region ap-south-1 --parameter-overrides S3BucketName=s-bucket-cicd1  --no-confirm-changeset --no-fail-on-empty-changeset --capabilities CAPABILITY_IAM --resolve-s3
+    artifacts:
+     files:
+       - '**/*'
+     base-directory: sam-app/build
