--- a/A7-sam-app-url-shortener/buildspec.yaml
+++ b/A7-sam-app-url-shortener/buildspec.yaml
@@ -16,13 +16,13 @@ phases:
    commands:
      - sam build
      
- post_build:
-   commands:
-     - echo Build completed on `date`
+ 
      
-# artifacts:
-#  files:
-#    - '**/*'
+artifacts:
+ files:
+   - '**/*'
+ base-directory: build
+ name: build-output 
 
 
 
