--- a/A7-sam-app-url-shortener/template.yaml
+++ b/A7-sam-app-url-shortener/template.yaml
@@ -3,6 +3,14 @@ Transform: AWS::Serverless-2016-10-31
 Description: >
   sam-app-url-shortener
   Sample SAM Template for sam-app-url-shortener
+Metadata:
+  AWS::CloudFormation::Stack:
+    Name: YourStackName
+    Transform: AWS::Serverless-2016-10-31
+    TemplateURL: https://s-bucket-cicd1.s3.ap-south-1.amazonaws.com/template.yaml  
+    Capabilities:
+      - CAPABILITY_IAM
+      - CAPABILITY_NAMED_IAM
 Resources:
   MyS3Bucket:
        Type: AWS::S3::Bucket
@@ -12,17 +20,19 @@ Resources:
     Type: AWS::Serverless::Api
     Properties:
       StageName: Prod
+ 
   URLShortenerFunction:
       Type: AWS::Serverless::Function 
       Properties:
         Handler: app.lambda_handler
         Runtime: python3.11
         CodeUri: ./url-shortener
-        # s3://my-bucket/my-function.zip
+        
         Environment:
           Variables:
             TABLE_NAME: !Ref URLShortenerTable
             REGION_NAME: ap-south-1
+        # Role: !GetAtt MyLambdaExecutionRole.Arn
         Policies:
           - DynamoDBCrudPolicy:
               TableName: !Ref URLShortenerTable
@@ -67,6 +77,130 @@ Resources:
           Projection:
             ProjectionType: ALL
           
+  CodeCommitRepository:
+    Type: AWS::CodeCommit::Repository
+    Properties:
+      RepositoryName: s-urlshortener-repo
+      RepositoryDescription: code commit repo
+  CodeBuildRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service: codebuild.amazonaws.com
+            Action: sts:AssumeRole
+      Policies:
+        - PolicyName: CodeBuildPolicy
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+              - Effect: Allow
+                Action:
+                  - s3:GetObject
+                  - s3:GetObjectVersion
+                  - s3:GetBucketVersioning
+                  - s3:GetBucketAcl
+                  - s3:GetBucketLocation
+                  - s3:GetObjectAcl
+                  - s3:ListBucket
+                Resource: !GetAtt MyS3Bucket.Arn  
+              - Effect: Allow
+                Action:
+                  - codecommit:GitPull 
+                Resource: !GetAtt CodeCommitRepository.Arn
+  CodeBuildProject:
+    Type: AWS::CodeBuild::Project
+    Properties:
+      Name: CodeBuildProject
+      Description: CodeBuild Project
+      ServiceRole: !GetAtt CodeBuildRole.Arn  
+      Source:
+        Type: CODECOMMIT
+        Location: !GetAtt CodeCommitRepository.CloneUrlHttp
+      Artifacts:
+        Location: !GetAtt MyS3Bucket.Arn 
+        Name: "build-output"
+        Packaging: "ZIP"
+        Path: "/build-output"
+        Type: "S3"
+      Environment:
+        Type: LINUX_CONTAINER
+        ComputeType: BUILD_GENERAL1_SMALL
+        Image: aws/codebuild/standard:4.0
+  
+  CodePipelineRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service: codepipeline.amazonaws.com
+            Action: sts:AssumeRole
+      Policies:  
+        - PolicyName: CodePipelinePolicy
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+              - Effect: Allow
+                Action:
+                  - codepipeline:*
+                Resource: "*"
+                
+  CodePipeline:
+    Type: AWS::CodePipeline::Pipeline
+    Properties:
+      Name: CodePipeline
+      RoleArn: !GetAtt CodePipelineRole.Arn
+      ArtifactStore:
+        Location: s-bucket-cicd1
+        Type: S3
+      Stages:
+      - Name: Source
+        Actions:
+          - Name: SourceActions
+            ActionTypeId:
+              Category: Source
+              Owner: AWS
+              Version: "1"
+              Provider: CodeCommit
+            OutputArtifacts:
+              - Name: SourceOutput
+            Configuration:
+              RepositoryName: s-urlshortener-repo
+              BranchName: main
+              PollForSourceChanges: true
+      - Name: Build
+        Actions:
+          - Name: CodeBuildAction
+            ActionTypeId:
+              Category: Build
+              Owner: AWS
+              Version: "1"
+              Provider: CodeBuild
+            InputArtifacts:
+              - Name: SourceOutput
+            OutputArtifacts:
+              - Name: BuildOutput
+            Configuration:
+              ProjectName: CodeBuildProject
+      - Name: Deploy
+        Actions:
+          - Name: DeployAction
+            ActionTypeId:
+              Category: Invoke
+              Owner: AWS
+              Version: "1"
+              Provider: Lambda  
+            InputArtifacts:
+              - Name: SourceOutput
+            Configuration:
+              FunctionName: URLShortenerFunction
+                              
 Outputs:
   URLShortenerFunction:
     Description: "URL Shortener Lambda Function"
@@ -80,5 +214,3 @@ Outputs:
       Fn::GetAtt:
         - URLShortenerTable
         - Arn
-  
-
