--- a/A12-email-alert-delete-s3/template.yaml
+++ b/A12-email-alert-delete-s3/template.yaml
@@ -66,6 +66,7 @@ Resources:
                   - 's3:GetObject'
                   - 's3:GetObjectVersion'
                   - 's3:GetBucketVersioning'
+                  - 'S3:PutObject'
                 Resource: !GetAtt EmailAlertCicdArtifacts.Arn
               - Effect: Allow
                 Action:
