--- a/A12-email-alert-delete-s3/template.yaml
+++ b/A12-email-alert-delete-s3/template.yaml
@@ -33,6 +33,12 @@ Resources:
             - ses:SendEmail
             - ses:SendRawEmail
             Resource: "*"
+        - Statement:
+          - Effect: Allow
+            Action:
+            - codepipeline:PutJobSuccessResult
+            Resource: '*'
+
       Events:
         S3Event:
           Type: S3
