--- a/A12-email-alert-delete-s3/template.yaml
+++ b/A12-email-alert-delete-s3/template.yaml
@@ -32,6 +32,7 @@ Resources:
             Action:
             - ses:SendEmail
             - ses:SendRawEmail
+            - codepipeline:PutJobSuccessResult
             Resource: "*"
       Events:
         S3Event:
