--- a/A13-gen-employee-report/.gitignore
+++ b/A13-gen-employee-report/.gitignore
@@ -241,4 +241,10 @@ $RECYCLE.BIN/
 
 */build/*
 
-# End of https://www.gitignore.io/api/osx,linux,python,windows,pycharm,visualstudiocode
+#aws-sam folder
+.aws-sam/
+
+.vscode/
+
+assets/
+events
